@@ -10,6 +10,7 @@ PySCF 1.4.1 (201?-?-?)
 ----------------------
 * Bugfix
   - meta-GGA functional detection code in XC parser
+  - Orbital symmetry label in mcscf initial guess projection
 
 PySCF 1.4 (2017-10-05)
 ----------------------
